k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yarinbar-website
spec:
  selector:
    app: yarinbar-website
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
