k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yarinbar-website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # DigitalOcean managed K8s (do-fra1-kollit-k8s)
  # Requires: nginx-ingress-controller + cert-manager installed on cluster
  tls:
    - hosts:
        - yarinbar.com
        - www.yarinbar.com
      secretName: yarinbar-tls
  rules:
    - host: yarinbar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yarinbar-website
                port:
                  number: 80
    - host: www.yarinbar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yarinbar-website
                port:
                  number: 80
